# tcc

./: Cargo.toml  LICENSE  README.md  test.csv
client/: Cargo.toml  Dioxus.toml  Dockerfile  package-lock.json  package.json
client/assets/: input.css  output.css
client/docs/: 404.html
client/docs/assets/: leaf_1-a463272578db8935.png.br  leaf_2-00e310c208a74f6b.png.br  output-56853fdccfe86b8f.css  output-56853fdccfe86b8f.css.br  pot-84911ddaa7bf3041.png.br  spatula-da59ef64e88c9be4.png.br  tcc-1a600c3bedbc4734.js.br  tcc_bg-0c20ab507ca815b4.wasm  tcc_bg-0c20ab507ca815b4.wasm.br
client/src/: address_connector.rs  auth0.rs  calculator copy.rs  calculator.rs  lib.rs  main.rs  main3.rs
client/src/side/: create.rs  dashboard.rs  details.rs  mod.rs  run_schedule.rs
client/src/side/details/: address.rs  calculate.rs  courses.rs  mod.rs  overview.rs  share_team.rs  startend.rs  teams.rs
client/src/storage/: local.rs  local_storage.rs  mapper.rs  mod.rs
client/tests/: calculator.rs  calculator_test.rs
client/tests/data/: mod.rs
docs/assets/: cake-d4a92f1c4e215e88.png.br  carrot-5b2a885a51de4cae.png.br  favicon-34364211fafe2a6b.ico.br  logo-22b14ed4e44a39cc.png.br  tcc-1a600c3bedbc4734.js
server/: swagger.yml
server/migrations/: 20250807_create_cook_and_run_tabel.sql
server/migrations/2025-08-19-145730_base/: down.sql  up.sql
server/openapi/: swagger.yml
server/src/: address.rs  cook_and_run.rs  course.rs  error.rs  note.rs  plan.rs  routes.rs  sharing.rs  state.rs  team.rs
server/src/db/: address.rs  cook_and_run.rs  course.rs  mod.rs  models.rs  note.rs  plan.rs  schema.rs  sharing.rs  team.rs
src/: calculator.rs  contact.rs  image_collection.rs  lib.rs  main copy.rs  main.rs
src/screen/: calculate.rs  load.rs  mod.rs  result.rs  rule.rs
tests/: calculator_test.rs
tests/data/: cordinate.py  mod.rs
