[package]
name = "tcc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tcc"
path = "src/main.rs"

[lib]
name = "tcc"
path = "src/lib.rs"

[dependencies]
serde_derive = "1.0"
chrono = "0.4.39"
csv = "1.3.1"
env_logger = "0.11.6"
iced = "0.13.1"
iced_style = "0.12.1"
iced_winit = "0.13.0"
image = "0.25.5"
log = "0.4.22"
rand = "0.8.5"
rfd = "0.15.0"
serde = "1.0.210"
threadpool = "1.8.1"
winresource = "0.1.19"
colored = "3.0.0"
