[package]
name = "tcc"
version = "0.1.0" 
authors = ["TheBohne"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4.41", features =["serde"]}
dioxus = { version = "0.6.3", features = ["router","web"] }
dioxus-web = "0.6.3"
dioxus-router = "0.6.3"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version ="1.16.0", features =["v4","serde","js"]}
web-sys = {version = "0.3.77", features =["Storage","console", "HtmlElement",
    "HtmlCanvasElement",
    "Element",
    "Document",
    "Window","Blob", "Url", "UrlSearchParams", "HtmlAnchorElement","FileReader", "ProgressEvent"]}
gloo-timers = { version = "0.3", features = ["futures"] }
urlencoding = "2.1.3"
reqwest = { version = "0.12.18", default-features = false, features = ["blocking", "json"] } 



[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
